// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Ssuggestor /> snapshot - with arrow 1`] = `
<div
  className="input-group ss-root"
  onClick={[Function]}
  onKeyDown={[Function]}
  style={
    Object {
      "color": "#eee",
    }
  }
>
  <input
    className="form-control ss-input"
    onChange={[Function]}
    placeholder="placeholder text"
    required={false}
    title="tooltip text"
    type="text"
    value=""
  />
  <span
    className="ss-arrow"
  />
</div>
`;

exports[`<Ssuggestor /> snapshot - with close 1`] = `
<div
  className="input-group ss-root"
  onClick={[Function]}
  onKeyDown={[Function]}
  style={
    Object {
      "color": "#eee",
    }
  }
>
  <input
    className="form-control ss-input"
    onChange={[Function]}
    placeholder="placeholder text"
    required={false}
    title="tooltip text"
    type="text"
    value="temp"
  />
  <span
    className="ss-remove"
    onClick={[Function]}
  />
</div>
`;

exports[`<Ssuggestor /> snapshot - with suggestions 1`] = `
<div
  className="input-group ss-root"
  onClick={[Function]}
  onKeyDown={[Function]}
  style={
    Object {
      "color": "#eee",
    }
  }
>
  <input
    className="form-control ss-input"
    onChange={[Function]}
    placeholder="placeholder text"
    required={false}
    title="tooltip text"
    type="text"
    value=""
  />
</div>
`;

exports[`<Ssuggestor /> snapshot - with suggestions visible 1`] = `
<div
  className="input-group ss-root"
  onClick={[Function]}
  onKeyDown={[Function]}
  style={
    Object {
      "color": "#eee",
    }
  }
>
  <input
    className="form-control ss-input"
    onChange={[Function]}
    placeholder="placeholder text"
    required={false}
    title="tooltip text"
    type="text"
    value=""
  />
  <ul
    className="dropdown-menu ss-list"
  >
    <li
      className="ss-over-item"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <a>
        temporise
      </a>
    </li>
    <li
      className=""
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <a>
        whencesoeve
      </a>
    </li>
    <li
      className=""
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <a>
        turophile
      </a>
    </li>
    <li
      className=""
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <a>
        umlaut
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Ssuggestor /> snapshot - without suggestions 1`] = `
<div
  className="input-group ss-root"
  onClick={[Function]}
  onKeyDown={[Function]}
  style={
    Object {
      "color": "#eee",
    }
  }
>
  <input
    className="form-control ss-input"
    onChange={[Function]}
    placeholder="placeholder text"
    required={false}
    title="tooltip text"
    type="text"
    value=""
  />
</div>
`;
